# Titanic-analyse

./: 01_preprocess..ipynb  README.md  main.ipynb  main.py  pyproject.toml
