[project]
name = "titanic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "jupyter-core>=5.9.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "setuptools>=80.9.0",
    "xgboost>=3.1.3",
    "ydata-profiling>=4.12.2",
    "yellowbrick>=1.5",
]
